tests/invalid/invalid-009.inox
Module Invalid009

Main() :
    var X := True
    X := 10
;
